--- a/Mcba.UI/Properties/Resources.resx
+++ b/Mcba.UI/Properties/Resources.resx
@@ -187,4 +187,7 @@
   <data name="Restore_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Restore-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="RepararIntegridad" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\RepararIntegridad.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
